--- a/src/App.css
+++ b/src/App.css
@@ -25,12 +25,6 @@ P {
   background-color: #f2f2f2;
 }
 
-/*.slim-slider {
-  height: 500px;
-  overflow: hidden;
-  margin-bottom: auto
-}*/
-
 .slim-slider .carousel-item {
   height: 100%;
 }
@@ -58,13 +52,11 @@ P {
 .slim-slider {
   height: 500px;
   overflow: hidden;
-  margin-bottom: 20px;
-  /* Default value for larger screens */
+  /*margin-bottom: 20px;
+  Default value for larger screens */
 }
 
-@media (max-width: 768px) {
-
-  /* Adjust the max-width value based on your needs */
+@media (max-width: 600px) {
   .slim-slider {
     margin-bottom: 10px;
     /* Smaller value for mobile screens */
