--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
-P {
+/* General Styles */
+p {
   font-size: 16px;
-  color: #262626
+  color: #262626;
 }
 
 .section {
@@ -14,7 +15,8 @@ P {
 }
 
 .underline {
-  height: 04px;
+  height: 4px;
+  /* Fixed height */
   width: 4rem;
   background-color: rgb(214, 118, 9);
   margin-top: 10px;
@@ -31,18 +33,8 @@ P {
 
 .slim-slider .carousel-item img {
   object-fit: cover;
-  /* Ensures the image covers the container */
   height: 100%;
   width: 100%;
-}
-
-.footer a {
-  color: yellow;
-  text-decoration: none;
-}
-
-.footer a:hover {
-  color: rgb(214, 167, 38);
 }
 
 .py-4 {
@@ -52,13 +44,45 @@ P {
 .slim-slider {
   height: 500px;
   overflow: hidden;
-  /*margin-bottom: 20px;
-  Default value for larger screens */
 }
 
 @media (max-width: 700px) {
   .slim-slider {
     margin-bottom: 5px;
-    /* Smaller value for mobile screens */
   }
+}
+
+/* Footer Styles */
+.footer {
+  background-color: #343a40;
+  /* Dark background */
+  color: #e9ecef;
+  /* Light text color */
+  padding: 40px 0;
+  /* Padding for top and bottom */
+}
+
+.footer .footer-heading {
+  font-weight: bold;
+  font-size: 1.25rem;
+  color: yellow;
+}
+
+.footer .footer-divider {
+  border-color: #495057;
+  /* Lighter border color */
+}
+
+.footer .footer-text {
+  color: #e9ecef;
+  /* Light text color */
+}
+
+.footer a {
+  color: rgb(212, 13, 136);
+  text-decoration: none;
+}
+
+.footer a:hover {
+  color: rgb(214, 167, 38);
 }
