--- a/src/App.css
+++ b/src/App.css
@@ -28,12 +28,12 @@ p {
 }
 
 .slim-slider .carousel-item {
-  height: 100%;
+  height: 500px;
 }
 
 .slim-slider .carousel-item img {
   object-fit: cover;
-  height: 100%;
+  height: 500px;
   width: 100%;
 }
 
