--- a/src/App.css
+++ b/src/App.css
@@ -41,14 +41,14 @@ p {
 }
 
 .slim-slider .carousel-item {
-  height: 100%;
+  height: 600px;
 }
 
-.slim-slider .carousel-item img {
+/*.slim-slider .carousel-item img {
   object-fit: cover;
   height: 100%;
   width: 100%;
-}
+}*/
 
 .py-4 {
   background-color: skyblue;
@@ -98,4 +98,24 @@ p {
 
 .footer a:hover {
   color: rgb(214, 167, 38);
+}
+
+.video-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  /* Ensure container has a defined height */
+  overflow: hidden;
+  /* Ensure no overflow outside container */
+}
+
+.video-container video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  /* Crop to fit container */
 }
