--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,10 @@ p {
   color: #262626;
 }
 
-/*.section {
+.section {
   padding-top: 0px;
-  padding-bottom: 40px;
-}*/
+  padding-bottom: 20px;
+}
 
 .slideshow-container {
   position: relative;
